Fix spacing and layout of font rules, not sure it'll help

--- a/public/css/sass/fonts.scss
+++ b/public/css/sass/fonts.scss
@@ -1,21 +1,34 @@
 $cloudfront: "http://d22oiu9iz2vanq.cloudfront.net/carolynandtyler";
-@font-face {font-family: 'Thirsty Script Light';
+@font-face {
+  font-family: 'Thirsty Script Light';
   src:url('#{$cloudfront}/fonts/thirsty_script_light.eot');
-  src: url('#{$cloudfront}/fonts/thirsty_script_light.eot?#iefix')format('embedded-opentype'),
-  url('#{$cloudfront}/fonts/thirsty_script_light.woff')format('woff'),
-  url('#{$cloudfront}/fonts/thirsty_script_light.ttf') format('truetype');}
+  src: url('#{$cloudfront}/fonts/thirsty_script_light.eot?#iefix') format('embedded-opentype'),
+       url('#{$cloudfront}/fonts/thirsty_script_light.woff')format('woff'),
+       url('#{$cloudfront}/fonts/thirsty_script_light.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 @font-face {font-family: 'Voice Medium';
-  src:url('#{$cloudfront}/fonts/voice_medium.eot');
-  src: url('#{$cloudfront}/fonts/voice_medium.eot?#iefix')format('embedded-opentype'),
-  url('#{$cloudfront}/fonts/voice_medium.woff')format('woff'),
-  url('#{$cloudfront}/fonts/voice_medium.ttf') format('truetype');}
+  src: url('#{$cloudfront}/fonts/voice_medium.eot');
+  src: url('#{$cloudfront}/fonts/voice_medium.eot?#iefix') format('embedded-opentype'),
+       url('#{$cloudfront}/fonts/voice_medium.woff') format('woff'),
+       url('#{$cloudfront}/fonts/voice_medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 @font-face {font-family: 'Sorren Ex Bold';
-  src:url('#{$cloudfront}/fonts/sorren_ex_bold.eot');
-  src: url('#{$cloudfront}/fonts/sorren_ex_bold.eot?#iefix')format('embedded-opentype'),
-  url('#{$cloudfront}/fonts/sorren_ex_bold.woff')format('woff'),
-  url('#{$cloudfront}/fonts/sorren_ex_bold.ttf') format('truetype');}
+  src: url('#{$cloudfront}/fonts/sorren_ex_bold.eot');
+  src: url('#{$cloudfront}/fonts/sorren_ex_bold.eot?#iefix') format('embedded-opentype'),
+       url('#{$cloudfront}/fonts/sorren_ex_bold.woff') format('woff'),
+       url('#{$cloudfront}/fonts/sorren_ex_bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 @font-face {font-family: 'Sorren Ex Medium';
-  src:url('#{$cloudfront}/fonts/sorren_ex_medium.eot');
-  src: url('#{$cloudfront}/fonts/sorren_ex_medium.eot?#iefix')format('embedded-opentype'),
-  url('#{$cloudfront}/fonts/sorren_ex_medium.woff')format('woff'),
-  url('#{$cloudfront}/fonts/sorren_ex_medium.ttf') format('truetype');}
+  src: url('#{$cloudfront}/fonts/sorren_ex_medium.eot');
+  src: url('#{$cloudfront}/fonts/sorren_ex_medium.eot?#iefix') format('embedded-opentype'),
+       url('#{$cloudfront}/fonts/sorren_ex_medium.woff') format('woff'),
+       url('#{$cloudfront}/fonts/sorren_ex_medium.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
